# fengkuang-chatbot

./: .gitignore  PROJECT_GOAL.md  pyproject.toml
bot_service/: main.py
bot_service/api/: live.py
bot_service/config/: settings.py
bot_service/integrations/: agno_agent.py  message_publisher.py  mimo_client.py  nami_client.py  rabbitmq_publisher.py  redis_client.py
bot_service/personas/: pool.py
bot_service/services/: fake_message_generator.py  live_task_manager.py  llm_message_generator.py  match_context_store.py  nami_live_poller.py
docs/: live-team-integration.md
docs/superpowers/plans/: 2026-06-06-minimal-livestream-loop.md
mock_live_room/: main.py
mock_live_room/api/: pages.py
mock_live_room/consumers/: redis_stream_consumer.py
mock_live_room/services/: monitoring.py
mock_live_room/templates/: index.html  monitor.html  room.html
scripts/: check_redis.py
shared/: message_contract.py  redis_keys.py
tests/: test_agno_agent.py  test_bot_service_api.py  test_fake_message_generator.py  test_live_task_manager.py  test_llm_message_generator.py  test_message_contract.py  test_mimo_client.py  test_mock_live_room_consumer.py  test_mock_live_room_pages.py  test_nami_live_poller.py  test_personas.py  test_rabbitmq_publisher.py  test_real_nami_live_poller.py  test_real_redis_bot_service_api.py  test_real_redis_live_task_manager.py  test_real_redis_stream.py  test_redis_client.py  test_redis_keys.py  test_settings.py
