[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "livestream-bot"
version = "0.1.0"
description = "Live room warm-up bot service with a mock live room for Redis Stream integration testing."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "redis>=5.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "agno>=2.6.12",
    "openai>=2.0.0",
    "aio-pika>=9.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "fakeredis>=2.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = [
    "bot_service*",
    "mock_live_room*",
    "shared*",
]
